# ferrum

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  openocd.cfg
.github/: CODEOWNERS
cmake/linker/: stm32f4.ld.in
cmake/toolchains/: arm-none-eabi.cmake
cmsis/arm/: cmsis_gcc.h
cmsis/st/: stm32f411xe.h  stm32f4xx.h
config/boards/stm32f4/: blackpill_f411ce.h  stm32f4_board_validate.h
config/mcu/stm32f4/: stm32f411xe_limits.h  stm32f4_rcc_prescalers.h
examples/01_blinky/: main.c
system/stm32f4/: startup_stm32f4.c  system_stm32f4.c  system_stm32f4.h
